--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 HOST='http://localhost'
 PORT=3000
 DATABASE_NAME='deno_application'
-DATABASE_URL='mongodb://localhost:27017'
+DATABASE_URL='mongodb://127.0.0.1:27017'
